Bug 467348 - When using the app in a non-English language, cover overlay "Play" and "Add to Playlist" buttons do not work on startup until you switch to a different page and back
Summary: When using the app in a non-English language, cover overlay "Play" and "Add t...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
: 454032 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-03-14 17:27 UTC by Emir SARI
Modified: 2023-04-11 11:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments
patch to add output for missing connection (1.27 KB, patch)
2023-04-02 20:44 UTC, Matthieu Gallien
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emir SARI 2023-03-14 17:27:32 UTC
See title. Clicking on either button does nothing.
Comment 1 Nate Graham 2023-03-15 17:05:04 UTC
They work for me. Are you using a non en_US language? If so, if you temporarily switch to en_US, do the buttons work?
Comment 2 Emir SARI 2023-03-16 09:41:45 UTC
Yes, tr_TR. They indeed work when switched to en_US. Haven't tried with other English variants.
Comment 3 Nate Graham 2023-03-16 14:58:22 UTC
I thought so. We've had issues like this before. I'll investigate at some point in the short to medium term.
Comment 4 Nate Graham 2023-03-28 20:53:56 UTC
Even when running `en_GB elisa`, I can reproduce the bug. What's happening under the hood is that in abstractmediaproxymodel.cpp, the enqueue() signal is emitted but MediaPlayListProxyModel::enqueue is not connected to it, so nothing happens. However when running `en_US elisa`, the connection is made so MediaPlayListProxyModel::enqueue handles the signal and does what it needs to do.

I have not yet figured out why the connection isn't getting made when using any locale other than en_US.
Comment 5 Nate Graham 2023-03-28 22:34:46 UTC
...I mean `LANG=en_GB elisa` and `LANG=en_US elisa`, of course.
Comment 6 Nagy Tibor 2023-03-29 12:24:28 UTC
The weird thing is, when running with `LANG=en_GB` those buttons are only broken if you stay on the startup Albums/Artists page. When you switch away to a different page, then navigate right back those buttons start working as they should.
Comment 7 Nate Graham 2023-03-29 20:41:06 UTC
Fascinating. Can confirm.
Comment 8 Matthieu Gallien 2023-04-02 20:44:54 UTC
Created attachment 157801 [details]
patch to add output for missing connection
Comment 9 Matthieu Gallien 2023-04-02 20:46:46 UTC
I failed to reproduce even by running LANG=fr_FR ./elisa.
I suspect this to be a weird timing issue.
Would be nice to get someone to run with the patch and see if the added output shows up in the log.
Comment 10 Nate Graham 2023-04-03 18:39:21 UTC
I can reproduce the issue with `LANG=fr_FR elisa`, but that patch produces no output for me (and info debug logging is enabled).
Comment 11 Bug Janitor Service 2023-04-06 19:34:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/433
Comment 12 Nate Graham 2023-04-06 20:30:25 UTC
Fixed by Matthieu Gallien with https://invent.kde.org/multimedia/elisa/-/commit/6da2a89f35e0b36352baa458ec07011b5f5d8b73 in Elisa 23.04!
Comment 13 Jack Hill 2023-04-11 11:16:28 UTC
*** Bug 454032 has been marked as a duplicate of this bug. ***