only disconnect from playlist when the value is different

BUG: 467348